--- a/web/resources/jan/styles/layout.css
+++ b/web/resources/jan/styles/layout.css
@@ -7,7 +7,7 @@
 	min-height: 50px;
 	z-index: 999;
 	
-	background-color: #1e94d2;
+	background-color: darkcyan;
 }
 
 .aw-topbar > img {
@@ -55,7 +55,7 @@
 	transition: margin-left 0.5s;
 }
 
-@media (min-width: 960px) {
+@media (max-width: 960px) {
 	.aw-content {
 		margin-left: 5px;
 	}
